--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
-    "exif-js": "^2.3.0",
+    "exifreader": "^4.26.0",
     "framer-motion": "^10.18.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
