--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "image-info-helper",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "screenshot": "node scripts/cli.js",
+    "server": "node scripts/server.js"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
@@ -37,9 +39,13 @@
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "express": "^4.21.2",
     "globals": "^15.9.0",
     "lovable-tagger": "^1.0.19",
+    "multer": "^1.4.5-lts.1",
+    "playwright": "^1.50.1",
     "postcss": "^8.4.47",
+    "puppeteer": "^24.2.0",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
