--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,11 +19,14 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Docker Image
-        run: |
-          docker build --platform linux/amd64 -t containeurrouge/image-info-helper:amd64 .
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Tag and Push Image
-        run: |
-          docker tag image-info-helper containeurrouge/image-info-helper:amd64
-          docker push containeurrouge/image-info-helper:amd64
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: containeurrouge/image-info-helper:amd64
